<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_toolbar_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_toggle"
        android:icon="@drawable/ic_compare_arrows_white_24dp"
        android:title="@string/menu_toolbar_toggle"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/app_bar_preferences"
        android:icon="@drawable/ic_settings_white_24dp"
        android:menuCategory="system"
        android:title="@string/menu_toolbar_preferences"
        app:showAsAction="ifRoom" />

</menu>